build(build): Added rimraf
Added rimraf to clean up dist folder, so that files from the previous build would not get
accidentally commited

--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "buildWatch": "npm run build -- --watch",
     "unit": "mocha --require reify test/*.spec.js",
     "unitWatch": "npm run unit -- --watch",
-    "format": "standard --fix src/*.js",
-    "lint": "standard --verbose src/*.js",
-    "test": "npm run format && npm run lint && npm run unit",
+    "lint": "standard --verbose --fix src/*.js",
+    "test": "npm run lint && npm run unit",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz",
     "commitAgain": "git-cz --retry",
     "examplesWatch": "browser-refresh ./testserver.js",
     "testserver": "watch",
-    "stageDist": "git add dist"
+    "dist:clean": "git rm -r dist && rimraf dist || true",
+    "dist:stage": "git add dist"
   },
   "pre-commit": [
     "test",
+    "dist:clean",
     "build",
-    "stageDist"
+    "dist:stage"
   ],
   "repository": {
     "type": "git",
@@ -42,6 +43,10 @@
     "node-static": "^0.7.9",
     "pre-commit": "^1.2.2",
     "reify": "^0.10.0",
+    "rimraf": "^2.6.1",
+    "rollem": "^1.11.3",
+    "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-uglify": "^1.0.2",
     "semantic-release": "^6.3.6",
     "standard": "^10.0.2"
   },
@@ -50,9 +55,5 @@
       "path": "./node_modules/cz-conventional-changelog"
     }
   },
-  "dependencies": {
-    "rollem": "^1.11.3",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-uglify": "^1.0.2"
-  }
+  "dependencies": {}
 }
