--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "commit": "git-cz",
     "commitAgain": "git-cz --retry",
     "examplesWatch": "browser-refresh ./testserver.js",
-    "testserver": "watch",
+    "testserver": "npm-run-all --parallel buildWatch examplesWatch",
     "dist:clean": "git rm -r dist && rimraf dist || true",
     "dist:stage": "git add dist"
   },
@@ -41,10 +41,11 @@
     "cz-conventional-changelog": "^2.0.0",
     "mocha": "^3.3.0",
     "node-static": "^0.7.9",
+    "npm-run-all": "^4.0.2",
     "pre-commit": "^1.2.2",
     "reify": "^0.10.0",
     "rimraf": "^2.6.1",
-    "rollem": "^1.11.3",
+    "rollem": "^1.11.4",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-uglify": "^1.0.2",
     "semantic-release": "^6.3.6",
