--- a/package.json
+++ b/package.json
@@ -46,14 +46,7 @@
     "reify": "^0.10.0",
     "rimraf": "^2.6.1",
     "semantic-release": "^6.3.6",
-    "standard": "^10.0.2"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "dependencies": {
+    "standard": "^10.0.2",
     "ramda": "^0.23.0",
     "rollem": "^1.11.4",
     "rollup-plugin-buble": "^0.15.0",
@@ -61,5 +54,11 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-ramda": "^1.0.5",
     "rollup-plugin-uglify": "^1.0.2"
-  }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "dependencies": {}
 }
