--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz",
     "commitAgain": "git-cz --retry",
-    "examplesWatch": "browser-refresh ./testserver.js",
+    "examplesWatch": "nodemon ./testserver.js -e js,json --ignore src/",
     "testserver": "npm-run-all --parallel buildWatch examplesWatch",
     "dist:clean": "git rm -r dist && rimraf dist || true",
     "dist:stage": "git add dist"
@@ -37,23 +37,23 @@
   "homepage": "https://github.com/meszaros-lajos-gyorgy/split-article#readme",
   "devDependencies": {
     "assert": "^1.4.1",
-    "browser-refresh": "^1.7.1",
     "cz-conventional-changelog": "^2.0.0",
     "mocha": "^3.3.0",
-    "node-static": "^0.7.9",
+    "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "pre-commit": "^1.2.2",
-    "reify": "^0.10.0",
-    "rimraf": "^2.6.1",
-    "semantic-release": "^6.3.6",
-    "standard": "^10.0.2",
     "ramda": "^0.23.0",
+    "reify": "^0.10.0",
+    "reload": "^1.1.5",
+    "rimraf": "^2.6.1",
     "rollem": "^1.11.4",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-ramda": "^1.0.5",
-    "rollup-plugin-uglify": "^1.0.2"
+    "rollup-plugin-uglify": "^1.0.2",
+    "semantic-release": "^6.3.6",
+    "standard": "^10.0.2"
   },
   "config": {
     "commitizen": {
