test(examples): Finished writing the watcher server for the examples folder
Also replaced a couple of commands in package.json

--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "main": "index.js",
   "scripts": {
     "build": "rollem",
-    "buildWatch": "npm run build -- --watch",
+    "build:watch": "npm run build -- --watch",
     "unit": "mocha --require reify test/*.spec.js",
-    "unitWatch": "npm run unit -- --watch",
+    "unit:watch": "npm run unit -- --watch",
+    "watch": "npm-run-all --parallel build:watch examples:watch",
+    "examples:watch": "nodemon ./examples/server.js -e js,json --ignore src/",
     "lint": "standard --verbose --fix src/*.js",
     "test": "npm run lint && npm run unit",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz",
-    "commitAgain": "git-cz --retry",
-    "examplesWatch": "nodemon ./testserver.js -e js,json --ignore src/",
-    "testserver": "npm-run-all --parallel buildWatch examplesWatch",
+    "commit:again": "git-cz --retry",
     "dist:clean": "git rm -r dist && rimraf dist || true",
     "dist:stage": "git add dist"
   },
