--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "assert": "^1.4.1",
     "cz-conventional-changelog": "^2.0.0",
+    "express": "^4.15.2",
     "mocha": "^3.3.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
