build(scripts): Modified pre-commit hook, so it stages changes made by standard --fix
Also: simplified JIT build and commit by using -u switch for git add

--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "watch": "npm-run-all --parallel build:watch examples:watch",
     "examples:watch": "nodemon ./examples/server.js -e js,json,html,css --watch examples --watch dist/*.min.js",
     "lint": "standard --verbose --fix src/*.js",
+    "stage-after-lint": "git add src/* -u",
     "test": "npm run lint && npm run unit",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz",
     "commit:again": "git-cz --retry",
-    "dist:clean": "git rm -rf dist && rimraf dist || true",
-    "dist:stage": "git add dist --force"
+    "dist:clean": "rimraf dist || true",
+    "dist:stage": "git add dist --force -u"
   },
   "pre-commit": [
     "test",
+    "stage-after-lint",
     "dist:clean",
     "build",
     "dist:stage"
