--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "watch": "npm-run-all --parallel build:watch examples:watch",
     "examples:watch": "nodemon ./examples/server.js -e js,json,html,css --watch examples --watch dist/*.min.js",
     "lint": "standard --verbose --fix src/*.js",
-    "stage-after-lint": "git add src/* -u",
+    "stage-after-lint": "git add src",
     "test": "npm run lint && npm run unit",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz",
