--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post",
     "commit": "git-cz",
     "commit:again": "git-cz --retry",
+    "git:mergeNoCommit": "git merge --no-commit --squash",
+    "git:resetToHead": "git reset HEAD",
+    "git:createBranch": "git checkout -b",
+    "git:addAll": "git add -A",
+    "git:commitNoValidate": "git commit --no-validate -m \"Saving workspace\"",
+    "git:forceAdd": "git add --force -u",
     "dist:clean": "rimraf dist || true",
-    "dist:stage": "git add dist --force -u"
+    "dist:stage": "npm run git:forceAdd -- dist",
+    "workspace:save": "npm run all \"git:resetToHead\" \"git:createBranch -- workspace-{1}\" \"git:addAll\" \"git:commitNoValidate\" --",
+    "workspace:restore": "npm-run-all \"git:mergeNoCommit -- workspace-{1}\" \"git:resetToHead\"  --"
   },
   "pre-commit": [
     "test",
