build(rollup): Ditched rollem in favor of using rollup
Rollup 0.42 now supports multiple builds with the same syntax as rollem

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A small js component, which splits html content evenly between multiple separate targets",
   "main": "index.js",
   "scripts": {
-    "build": "rollem",
+    "build": "rollup -c",
     "build:watch": "npm run build -- --watch",
     "unit": "mocha --require reify test/*.spec.js",
     "unit:watch": "npm run unit -- --watch",
@@ -57,12 +57,13 @@
     "reify": "^0.10.0",
     "reload": "^1.1.5",
     "rimraf": "^2.6.1",
-    "rollem": "^1.12.0",
+    "rollup": "^0.42.0",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-ramda": "^1.0.5",
     "rollup-plugin-uglify": "^1.0.2",
+    "rollup-watch": "^4.0.0",
     "semantic-release": "^6.3.6",
     "standard": "^10.0.2"
   },
