--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rollup -c",
     "build:watch": "npm run build -- --watch",
-    "unit": "mocha --require reify test/**/*.spec.js",
+    "unit": "mocha test/**/*.spec.js --compilers js:babel-core/register",
     "unit:watch": "npm run unit -- --watch",
     "watch": "npm-run-all --parallel build:watch examples:watch",
     "examples:watch": "nodemon ./examples/server.js -e js,json,html,css --watch examples --watch dist/*.min.js",
@@ -41,6 +41,8 @@
   "homepage": "https://github.com/meszaros-lajos-gyorgy/split-article#readme",
   "devDependencies": {
     "assert": "^1.4.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
     "cz-conventional-changelog": "^2.0.0",
     "express": "^4.15.2",
     "mocha": "^3.3.0",
@@ -48,7 +50,6 @@
     "npm-run-all": "^4.0.2",
     "pre-commit": "^1.2.2",
     "ramda": "^0.23.0",
-    "reify": "^0.10.0",
     "reload": "^1.1.5",
     "rimraf": "^2.6.1",
     "rollup": "^0.42.0",
