--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "commit": "git-cz",
     "commit:again": "git-cz --retry",
     "dist:clean": "rimraf dist || true",
-    "dist:stage": "git add dist --force",
-    "workspace:save": "stash-to-branch --save",
-    "workspace:restore": "stash-to-branch --restore"
+    "dist:stage": "git add dist --force"
   },
   "pre-commit": [
     "test",
@@ -41,27 +39,26 @@
   "homepage": "https://github.com/meszaros-lajos-gyorgy/split-article#readme",
   "devDependencies": {
     "assert": "^1.4.1",
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "cz-conventional-changelog": "^2.0.0",
-    "express": "^4.15.2",
-    "mocha": "^3.3.0",
-    "nodemon": "^1.11.0",
-    "npm-run-all": "^4.0.2",
+    "express": "^4.16.2",
+    "mocha": "^4.0.1",
+    "nodemon": "^1.12.1",
+    "npm-run-all": "^4.1.1",
     "pre-commit": "^1.2.2",
-    "ramda": "^0.23.0",
-    "reload": "^1.1.5",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.42.0",
-    "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "ramda": "^0.25.0",
+    "reload": "^2.2.2",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.50.0",
+    "rollup-plugin-buble": "^0.16.0",
+    "rollup-plugin-commonjs": "^8.2.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-ramda": "^1.0.5",
-    "rollup-plugin-uglify": "^1.0.2",
-    "rollup-watch": "^4.0.0",
-    "semantic-release": "^6.3.6",
-    "standard": "^10.0.2",
-    "stash-to-branch": "^1.0.4"
+    "rollup-plugin-uglify": "^2.0.1",
+    "rollup-watch": "^4.3.1",
+    "semantic-release": "^8.2.0",
+    "standard": "^10.0.3"
   },
   "config": {
     "commitizen": {
